--- a/.github/workflows/publish-layer-collector.yml
+++ b/.github/workflows/publish-layer-collector.yml
@@ -47,9 +47,14 @@ on:
         description: 'Build tags to customize collector build'
         required: false
         type: string
+      codesigning-profile:
+        description: 'The AWS Signing Profile for the layers'
+        required: false
+        type: string
 
 permissions:
   contents: read
+  attestations: write
 
 jobs:
   prepare-build-jobs:
@@ -89,6 +94,10 @@ jobs:
           fi
           echo "Build tags: $BUILDTAGS"
           make -C collector package GOARCH=${{ matrix.architecture }} BUILDTAGS=$BUILDTAGS
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@977bb373ede98d70efdf65b84cb5f73e068dcc2a  #v3.0.0
+        with:
+          subject-path: ${{ github.workspace }}/collector/build/opentelemetry-collector-layer-${{ matrix.architecture }}.zip
       - name: Upload Collector Artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
