add 3.4 in runtime

--- a/.github/workflows/release-layer-ruby.yml
+++ b/.github/workflows/release-layer-ruby.yml
@@ -91,7 +91,7 @@ jobs:
       artifact-name: opentelemetry-ruby-layer.zip
       layer-name: opentelemetry-ruby
       component-version: ${{needs.build-layer.outputs.RUBY_SDK_VERSION}}
-      runtimes: ruby3.2 ruby3.3
+      runtimes: ruby3.2 ruby3.3 ruby3.4
       release-group: prod
       aws_region: ${{ matrix.aws_region }}
     secrets: inherit
