--- a/.github/workflows/release-layer-java.yml
+++ b/.github/workflows/release-layer-java.yml
@@ -93,6 +93,7 @@ jobs:
           - ap-southeast-1
           - ap-southeast-2
           - ca-central-1
+          - ca-west-1
           - eu-central-1
           - eu-north-1
           - eu-west-1
@@ -130,6 +131,7 @@ jobs:
           - ap-southeast-1
           - ap-southeast-2
           - ca-central-1
+          - ca-west-1
           - eu-central-1
           - eu-north-1
           - eu-west-1
