--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -78,6 +78,7 @@ jobs:
           - ap-southeast-1
           - ap-southeast-2
           - ca-central-1
+          - ca-west-1
           - eu-central-1
           - eu-north-1
           - eu-west-1
