build: set type roots for nodejs wrapper

--- a/nodejs/tsconfig.esm.json
+++ b/nodejs/tsconfig.esm.json
@@ -20,7 +20,7 @@
     "incremental": true,
     "newLine": "LF",
     "typeRoots": [
-      "./node_modules/@types"
+      "node_modules/@types"
     ]
   },
   "exclude": [
