--- a/nodejs/tsconfig.base.json
+++ b/nodejs/tsconfig.base.json
@@ -19,7 +19,7 @@
     "incremental": true,
     "newLine": "LF",
     "typeRoots": [
-      "./node_modules/@types"
+      "node_modules/@types"
     ]
   },
   "exclude": [
