build: add typeRoots to tsconfig as fix for possible conflicts with other types in repositories with this repo as submodule (#2035)
* build: add typeRoots to tsconfig as fix for possible conflicts with other types in repositories with this repo as submodule

* build: add typeRoots to tsconfig.esm.json

* build: set type roots for nodejs wrapper

--- a/nodejs/tsconfig.esm.json
+++ b/nodejs/tsconfig.esm.json
@@ -18,7 +18,10 @@
     "strict": true,
     "strictNullChecks": true,
     "incremental": true,
-    "newLine": "LF"
+    "newLine": "LF",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules"
