Add support for Python 3.14

--- a/python/sample-apps/template.yml
+++ b/python/sample-apps/template.yml
@@ -47,5 +47,6 @@ Resources:
         - python3.11
         - python3.12
         - python3.13
+        - python3.14
     Metadata:
       BuildMethod: makefile
